--- a/index.html
+++ b/index.html
@@ -20,13 +20,25 @@
 			<div class="checklist">
 				<div class="checklist__content">
 					<div class="checklist__header">
-						<div class="checklist__title">CheckList</div>
+						<div class="checklist__title">Check List</div>
 						<input type="text" class="checklist__input">
 					</div>
 					<div class="checklist__main">
 						<ul class="checklist__items">
-							<li class="checklist__item">Тестовый</li>
-							<li class="checklist__item">Второй тестовый</li>
+							<!-- <li class="checklist__item item">
+								<div class="item__text">Тестовый чек</div>
+								<div class="item__symbol">
+									<div class="item__cross">&#10060</div>
+									<div class="item__done">&#9989</div>
+								</div>
+							</li>
+							<li class="checklist__item item">
+								<div class="item__text">Второй тестовый</div>
+								<div class="item__symbol">
+									<div class="item__cross">&#10060</div>
+									<div class="item__done">&#9989</div>
+								</div>
+							</li>
 							<li class="checklist__item item">
 								<div class="item__text">Третий тестовый</div>
 								<div class="item__symbol">
@@ -34,6 +46,28 @@
 									<div class="item__done">&#9989</div>
 								</div>
 							</li>
+							<li class="checklist__item item">
+								<div class="item__text">ЧЕТЫРЕ ТЕСТОВЫХ ТЕСТА НА 2Х СТРОЧКАХ</div>
+								<div class="item__symbol">
+									<div class="item__cross">&#10060</div>
+									<div class="item__done">&#9989</div>
+								</div>
+							</li>
+							<li class="checklist__item item">
+								<div class="item__text">Пять)</div>
+								<div class="item__symbol">
+									<div class="item__cross">&#10060</div>
+									<div class="item__done">&#9989</div>
+								</div>
+							</li>
+							<li class="checklist__item item">
+								<div class="item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+									ipsam.</div>
+								<div class="item__symbol">
+									<div class="item__cross">&#10060</div>
+									<div class="item__done">&#9989</div>
+								</div>
+							</li> -->
 						</ul>
 					</div>
 				</div>
